Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-7675

The result of UpdateTableUsage() RPC is not correctly handled.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 3.1.0
    • Impala 3.1.0
    • Frontend
    • None
    • ghx-label-6

    Description

      ImpalaTableUsageTracker.report() doesn't handle the result of UpdateTableUsage() RPC correctly and triggers NullpointerException:

      W1003 11:07:39.252918  6910 ImpaladTableUsageTracker.java:116] Unable to report table usage information to catalog server.
      Java exception follows:
      java.lang.NullPointerException
              at org.apache.impala.catalog.ImpaladTableUsageTracker.report(ImpaladTableUsageTracker.java:110)
              at org.apache.impala.catalog.ImpaladTableUsageTracker.access$000(ImpaladTableUsageTracker.java:44)
              at org.apache.impala.catalog.ImpaladTableUsageTracker$1.run(ImpaladTableUsageTracker.java:56)
              at java.lang.Thread.run(Thread.java:748)
      

      Attachments

        Activity

          People

            tianyiwang Tianyi Wang
            tianyiwang Tianyi Wang
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: